--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 /*--RESET STYLE---*/
 @import url("reset.css");
+/*--COMMON STYLE---*/
+@import url("common.css");
 /*--HEADER STYLE---*/
 @import url("header.css");
 /*--FOOTER STYLE---*/
@@ -22,6 +24,13 @@ body {
 
 .page {
     flex: 1 1 auto;
+    padding-top: 85px;
+}
+
+@media (max-width: 500px) {
+    .page {
+        padding-top: 73px;
+    }
 }
 
 /*------------------------------------------------------------------*/
