--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,28 @@
+.button {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 27px;
+    padding: 10px 32px;
+    color: #eeeeee;
+    background-color: #00ADB5;
+    border-radius: 24px;
+    transition: backgraund-color 0.3s ease 0s;
+}
+
+.button:hover {
+    background-color: rgba(57, 62, 70, 0.75);
+}
+
+.button_dark {
+    background-color: rgba(57, 62, 70, 0.75);
+}
+
+.button_dark:hover {
+    background-color: #00ADB5;
+}
+
+/*--------------------------------------------------*/
+
 .social {
     display: flex;
     justify-content: center;
