--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,27 @@
+.title {
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 1.2;
+    color: #eeeeee;
+}
+
+.title span {
+    color: #00ADB5;
+}
+
+@media (max-width: 991.98px) {
+    .title {
+        font-size: 52px;
+    }
+}
+
+@media (max-width: 767.98px) {
+    .title {
+        font-size: 45px;
+    }
+}
+
+/*--------------------------------------------------*/
 .button {
     font-weight: 700;
     font-size: 18px;
