--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,8 @@ body {
 
 .page__works {}
 
+.page__contacts {}
+
 /*------------------------------------------------------------------*/
 [class*="__container"] {
     max-width: 1280px;
@@ -315,6 +317,121 @@ body {
 }
 
 /*------------------------------------------------------------------*/
+
+
+.contacts {
+    padding-top: 155px;
+    padding-bottom: 155px;
+}
+
+.contacts__container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 48px;
+    align-items: start;
+}
+
+.contacts__content {}
+
+.contacts__title {}
+
+.contacts__image {
+    text-align: center;
+}
+
+.contacts__image img {
+    max-width: 100%;
+}
+
+.contacts__form {}
+
+.form {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+
+.form__item {}
+
+.form__item:nth-child(3),
+.form__item:nth-child(4) {
+    grid-column: span 2;
+}
+
+.form__label {
+    display: block;
+    margin-bottom: 10px;
+    font-weight: 700;
+}
+
+.form__input {
+    background: rgba(57, 62, 70, 0.5);
+    border-radius: 16px;
+    width: 100%;
+    padding: 0 24px;
+    color: #fff;
+    height: 59px;
+}
+
+textarea.form__input {
+    height: 280px;
+    padding: 24px;
+    resize: vertical;
+}
+
+.form__input::placeholder {
+    color: rgba rgba(238, 238, 238, 0.5);
+    transition: opacity 0.3s ease 0s;
+}
+
+.form__input:focus::placeholder {
+    opacity: 0;
+}
+
+.form__button {}
+
+.form__button span {
+    display: inline-block;
+    padding-right: 34px;
+    background: url("/img/icons/send.svg") right no-repeat;
+}
+
+@media (max-width: 1280px) {
+    .contacts {
+        padding-top: 70px;
+        padding-bottom: 70px;
+    }
+}
+
+@media (max-width: 991.98px) {
+    .contacts {
+        padding-top: 45px;
+        padding-bottom: 45px;
+    }
+
+    .contacts__container {
+        grid-template-columns: auto;
+    }
+
+    .contacts__title {
+        text-align: center;
+    }
+
+    .contacts__image {
+        display: none;
+    }
+}
+
+@media (max-width: 600px) {
+    .form {
+        flex-direction: column;
+        display: flex;
+    }
+
+    .form__button {
+        width: 100%;
+    }
+}
 
 
 /*------------------------------------------------------------------*/
